--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -3,8 +3,6 @@
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -12,10 +10,8 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
 
 <TabPane fx:id="tabPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EditProjectController">
     <tabs>
@@ -23,10 +19,13 @@
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="createProjectButton" onAction="#createProject" layoutX="425.0"  layoutY="197.0" mnemonicParsing="false" text="Создать проект" />
-                  <Button  fx:id="selectProjectButton" onAction="#selectProject" layoutX="423.0" layoutY="231.0" mnemonicParsing="false" text="Выбрать проект" />
+                  <Button fx:id="createProjectButton" layoutX="425.0" layoutY="197.0" mnemonicParsing="false" onAction="#createProject" text="Создать проект" />
+                  <Button fx:id="selectProjectButton" layoutX="423.0" layoutY="231.0" mnemonicParsing="false" onAction="#selectProject" text="Выбрать проект" />
                   <TextField fx:id="createProjectTextField" layoutX="543.0" layoutY="197.0" prefHeight="25.0" prefWidth="177.0" promptText="Название проекта" visible="false" />
                   <ListView fx:id="selectProjectListView" layoutX="543.0" layoutY="231.0" prefHeight="200.0" prefWidth="176.0" visible="false" />
+                  <Button fx:id="addProjectButton" layoutX="728.0" layoutY="197.0" mnemonicParsing="false" onAction="#addProject" text="+" visible="false" />
+                  <Button fx:id="startProject" layoutX="728.0" layoutY="231.0" mnemonicParsing="false" text="Выбрать" visible="false" />
+                  <Button fx:id="deleteProjectButton" visible="false" layoutX="730.0" layoutY="273.0" mnemonicParsing="false" text="Удалить" />
                </children>
             </AnchorPane>
          </content>
@@ -35,27 +34,24 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <TextField layoutX="14.0" layoutY="23.0" prefHeight="26.0" prefWidth="261.0" promptText="Название проекта" />
-                        <TextField layoutX="14.0" layoutY="61.0" prefHeight="26.0" prefWidth="261.0" promptText="Общая площадь" />
-                        <TextField layoutX="13.0" layoutY="136.0" prefHeight="26.0" prefWidth="262.0" promptText="Стоимость ДП за кв.м" />
-                        <TextField layoutX="13.0" layoutY="171.0" prefHeight="26.0" prefWidth="262.0" promptText="Скидка за ДП %" />
-                        <Button fx:id="createRoomButton" layoutX="13.0" layoutY="99.0" mnemonicParsing="false" onAction="#addRoom" prefHeight="26.0" prefWidth="262.0" text="+ Добавить помещение" />
-                        <Button fx:id="addPaymentButton" layoutX="13.0" layoutY="208.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="262.0" text="+ Добавить этап оплаты" />
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Валюта :" />
-
-                  <AnchorPane fx:id="roomPane" layoutX="312.0" layoutY="16.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="362.0" prefWidth="422.0" visible="false">
-                     <children>
-                        <Button layoutX="227.0" layoutY="31.0" mnemonicParsing="false" onAction="#deleteRoomElement" text="Удалить" />
-                        <Button fx:id="saveRoomButton" layoutX="137.0" layoutY="31.0" mnemonicParsing="false" onAction="#saveRoomElement" text="Сохранить" />
-                        <TableView fx:id="roomTableView" layoutX="27.0" layoutY="73.0" onMouseClicked="#On_tabCalculatorClickedActionRoom" prefHeight="200.0" prefWidth="358.0">
-                           <columns>
-                              <TableColumn fx:id="colNameRoom" prefWidth="185.0" text="Помещение" />
-                              <TableColumn fx:id="colAreaRoom" prefWidth="100.0" text="Площадь" />
-                              <TableColumn fx:id="colSelectBathRoom" prefWidth="70.0" text="Санузел" />
-                           </columns>
-                        </TableView>
-                     </children>
-                  </AnchorPane>
+                        <TextField layoutX="14.0" layoutY="16.0" prefHeight="26.0" prefWidth="353.0" promptText="Общая площадь" />
+                        <TextField layoutX="14.0" layoutY="51.0" prefHeight="26.0" prefWidth="354.0" promptText="Стоимость ДП за кв.м" />
+                        <TextField layoutX="14.0" layoutY="86.0" prefHeight="26.0" prefWidth="354.0" promptText="Скидка за ДП %" />
+                        <Button fx:id="createRoomButton" layoutX="375.0" layoutY="160.0" mnemonicParsing="false" onAction="#createRoom" prefHeight="26.0" prefWidth="75.0" text="Добавить" />
+                        <Button fx:id="addPaymentButton" layoutX="14.0" layoutY="118.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="353.0" text="+ Добавить этап оплаты" />
+                  <Button layoutX="375.0" layoutY="195.0" mnemonicParsing="false" onAction="#deleteRoomElement" prefHeight="25.0" prefWidth="75.0" text="Удалить" />
+                  <Button fx:id="saveRoomButton" layoutX="376.0" layoutY="228.0" mnemonicParsing="false" onAction="#saveRoomElement" text="Сохранить" />
+                  <TableView fx:id="roomTableView" layoutX="14.0" layoutY="160.0" onMouseClicked="#On_tabCalculatorClickedActionRoom" prefHeight="200.0" prefWidth="353.0">
+                     <columns>
+                        <TableColumn fx:id="colNameRoom" prefWidth="185.0" text="Помещение" />
+                        <TableColumn fx:id="colAreaRoom" prefWidth="88.0" text="Площадь" />
+                        <TableColumn fx:id="colSelectBathRoom" prefWidth="82.0" text="Санузел" />
+                     </columns>
+                  </TableView>
+                  <TextField fx:id="roomNameTextField" layoutX="464.0" layoutY="161.0" prefHeight="25.0" prefWidth="146.0" visible="false" />
+                  <TextField fx:id="roomAreaTextField" layoutX="614.0" layoutY="161.0" prefHeight="25.0" prefWidth="45.0" visible="false" />
+                  <TextField fx:id="roomSelectBathRoomTextField" layoutX="664.0" layoutY="161.0" prefHeight="25.0" prefWidth="42.0" visible="false" />
+                  <Button fx:id="addRoomButton" layoutX="713.0" layoutY="161.0" mnemonicParsing="false" onAction="#addRoom" text="+" visible="false" />
                     </children>
                 </AnchorPane>
             </content>
