--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -21,10 +20,15 @@
                <children>
                   <Button fx:id="createProjectButton" layoutX="425.0" layoutY="197.0" mnemonicParsing="false" onAction="#createProject" text="Создать проект" />
                   <Button fx:id="selectProjectButton" layoutX="423.0" layoutY="231.0" mnemonicParsing="false" onAction="#selectProject" text="Выбрать проект" />
-                  <TextField fx:id="createProjectTextField" layoutX="543.0" layoutY="197.0" prefHeight="25.0" prefWidth="177.0" promptText="Название проекта" visible="true" />
-                  <Button fx:id="addProjectButton" layoutX="728.0" layoutY="197.0" mnemonicParsing="false" onAction="#addProject" text="+" visible="true" />
-                  <Button fx:id="startProject" layoutX="728.0" layoutY="231.0" mnemonicParsing="false" text="Выбрать" visible="true" />
-                  <Button fx:id="deleteProjectButton" visible="true" layoutX="730.0" layoutY="273.0" mnemonicParsing="false" text="Удалить" />
+                  <TextField fx:id="createProjectTextField" layoutX="543.0" layoutY="197.0" prefHeight="25.0" prefWidth="177.0" promptText="Название проекта" visible="false" />
+                  <Button fx:id="addProjectButton" layoutX="728.0" layoutY="197.0" mnemonicParsing="false" onAction="#addProject" text="+" visible="false" />
+                  <Button fx:id="startProject" layoutX="728.0" layoutY="231.0" mnemonicParsing="false" text="Выбрать" visible="false" />
+                  <Button fx:id="deleteProjectButton" layoutX="730.0" layoutY="273.0" mnemonicParsing="false" text="Удалить" visible="false" />
+                  <TableView fx:id="projectTableView" layoutX="543.0" layoutY="231.0" prefHeight="200.0" prefWidth="177.0" visible="false">
+                    <columns>
+                      <TableColumn fx:id="colNameProject" prefWidth="176.0" text="Проект:" />
+                    </columns>
+                  </TableView>
                </children>
             </AnchorPane>
          </content>
@@ -196,7 +200,7 @@
                                              <children>
                                                 <TableView fx:id="materialTableViewWall" layoutY="31.0" onMouseClicked="#On_tabCalculatorClickedActionMaterialWall" prefHeight="669.0" prefWidth="1900.0">
                                                   <columns>
-                                                      <TableColumn fx:id="colNameMaterialWall" prefWidth="108.0" text="Наименование"  />
+                                                      <TableColumn fx:id="colNameMaterialWall" prefWidth="108.0" text="Наименование" />
                                                       <TableColumn fx:id="colActivePMaterialWall" prefWidth="25.0" text="П" />
                                                       <TableColumn fx:id="colActiveCMaterialWall" prefWidth="25.0" text="С" />
                                                       <TableColumn fx:id="colUnitMaterialWall" prefWidth="58.0" text="Ед.изм." />
