--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -9,10 +9,11 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.layout.FlowPane?>
 <TabPane fx:id="tabPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EditProjectController">
     <tabs>
       <Tab fx:id="fileView" text="Файл">
@@ -24,7 +25,7 @@
                   <TextField fx:id="createProjectTextField" layoutX="543.0" layoutY="197.0" prefHeight="25.0" prefWidth="177.0" promptText="Название проекта" visible="false" />
                   <Button fx:id="addProjectButton" layoutX="728.0" layoutY="197.0" mnemonicParsing="false" onAction="#addProject" text="+" visible="false" />
                   <Button fx:id="startProject" layoutX="728.0" layoutY="231.0" mnemonicParsing="false" text="Выбрать" visible="false" />
-                  <Button fx:id="deleteProjectButton" onAction="#deleteElementProject" layoutX="730.0" layoutY="273.0" mnemonicParsing="false" text="Удалить" visible="false" />
+                  <Button fx:id="deleteProjectButton" layoutX="730.0" layoutY="273.0" mnemonicParsing="false" onAction="#deleteElementProject" text="Удалить" visible="false" />
                   <TableView fx:id="projectTableView" layoutX="543.0" layoutY="231.0" prefHeight="200.0" prefWidth="177.0" visible="false">
                     <columns>
                       <TableColumn fx:id="colNameProject" prefWidth="176.0" text="Проект:" />
@@ -42,7 +43,7 @@
                         <TextField layoutX="14.0" layoutY="51.0" prefHeight="26.0" prefWidth="354.0" promptText="Стоимость ДП за кв.м" />
                         <TextField layoutX="14.0" layoutY="86.0" prefHeight="26.0" prefWidth="354.0" promptText="Скидка за ДП %" />
                         <Button fx:id="createRoomButton" layoutX="375.0" layoutY="160.0" mnemonicParsing="false" onAction="#createRoom" prefHeight="26.0" prefWidth="75.0" text="Добавить" />
-                        <Button fx:id="addPaymentButton" onAction="#test" layoutX="14.0" layoutY="118.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="353.0" text="+ Добавить этап оплаты" />
+                        <Button fx:id="addPaymentButton" layoutX="14.0" layoutY="118.0" mnemonicParsing="false" onAction="#test" prefHeight="26.0" prefWidth="353.0" text="+ Добавить этап оплаты" />
                   <Button layoutX="375.0" layoutY="195.0" mnemonicParsing="false" onAction="#deleteRoomElement" prefHeight="25.0" prefWidth="75.0" text="Удалить" />
                   <Button fx:id="saveRoomButton" layoutX="376.0" layoutY="228.0" mnemonicParsing="false" onAction="#saveRoomElement" text="Сохранить" />
                   <TableView fx:id="roomTableView" layoutX="14.0" layoutY="160.0" onMouseClicked="#On_tabCalculatorClickedActionRoom" prefHeight="200.0" prefWidth="353.0">
@@ -218,15 +219,17 @@
                                                       <TableColumn fx:id="colPaidMaterialWall" prefWidth="85.0" text="Оплачено" />
                                                       <TableColumn fx:id="colResidueMaterialWall" prefWidth="85.0" text="Остаток" />
                                                       <TableColumn fx:id="colDateOfDeliveryMaterialWall" prefWidth="85.0" text="Дата поставки" />
+                                                      <TableColumn fx:id="colNameRoomMaterialWall" prefWidth="85.0" text="Наименование помещения" />
                                                       <TableColumn fx:id="colPlannedCPMaterialWall" prefWidth="85.0" text="КП плановое" />
                                                       <TableColumn fx:id="colActualCPMaterialWall" prefWidth="85.0" text="КП фактическое" />
                                                       <TableColumn fx:id="colAccountMaterialWall" prefWidth="55.0" text="Счет" />
                                                       <TableColumn fx:id="colContactsMaterialWall" prefWidth="85.0" text="Контакты" />
-                                                      <TableColumn fx:id="colNotesMaterialWall" prefWidth="85.0" text="Примечания" />
-                                                      <TableColumn fx:id="colCharacteristicsMaterialWall" prefWidth="85.0" text="Характеристики" />
+                                                      <TableColumn fx:id="colNotesMaterialWall" prefWidth="85.0" text="Примечания" visible="false" />
+                                                      <TableColumn fx:id="colCharacteristicsMaterialWall" prefWidth="85.0" text="Характеристики" visible="false" />
                                                   </columns>
                                                 </TableView>
                                                 <Button layoutX="110.0" layoutY="2.0" mnemonicParsing="false" onAction="#deleteElementMaterialWall" text="Удалить" />
+                                                <ToggleButton fx:id="showMaterialWallButton" layoutX="191.0" layoutY="2.0" mnemonicParsing="false" text="Показать" onAction="#showMaterialWall" />
                                              </children></AnchorPane>
                                       </content>
                                     </ScrollPane>
